test/org/midica/testfiles/failing/sk-unknown-sk-cmd.midica
INCLUDE inc/instruments.midica

META
	composer	Beethoven
	
	SOFT_KARAOKE
		language   ENGL
		composer   Haydn
	END
END
